[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/farm.tscn" type="PackedScene" id=1]
[ext_resource path="res://Image-assets/notificationAlert.png" type="Texture" id=2]
[ext_resource path="res://Image-assets/avaloniaBackground.jpg" type="Texture" id=3]
[ext_resource path="res://Fonts/Medieval Scroll of Wisdom.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scripts/villageAvalonia.gd" type="Script" id=13]
[ext_resource path="res://Scripts/buttonsCollider.gd" type="Script" id=14]
[ext_resource path="res://Image-assets/bar-body.png" type="Texture" id=16]
[ext_resource path="res://Scenes/store.tscn" type="PackedScene" id=17]
[ext_resource path="res://Image-assets/filler.png" type="Texture" id=18]
[ext_resource path="res://Scenes/bakery.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/building.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/workshop.tscn" type="PackedScene" id=53]
[ext_resource path="res://Image-assets/round-frame.png" type="Texture" id=54]
[ext_resource path="res://Image-assets/fishing-icon.png" type="Texture" id=55]
[ext_resource path="res://Image-assets/hunting-fishing-upgrade.png" type="Texture" id=56]
[ext_resource path="res://Scripts/fishery.gd" type="Script" id=57]
[ext_resource path="res://Scripts/huntingCabin.gd" type="Script" id=58]
[ext_resource path="res://Image-assets/hunting-icon.png" type="Texture" id=59]
[ext_resource path="res://Shaders/grayscale.shader" type="Shader" id=60]

[sub_resource type="CircleShape2D" id=1]
radius = 43.5626

[sub_resource type="CircleShape2D" id=2]
radius = 32.3362

[sub_resource type="CircleShape2D" id=3]
radius = 42.0109

[sub_resource type="CircleShape2D" id=4]
radius = 29.609

[sub_resource type="DynamicFont" id=5]
size = 29
outline_size = 1
outline_color = Color( 0.305882, 0.2, 0.164706, 1 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 60 )
shader_param/grayscale = false

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 35
outline_size = 3
outline_color = Color( 0.101961, 0.054902, 0.0392157, 1 )
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 2
outline_color = Color( 0.078476, 0.0850815, 0.144531, 1 )
font_data = SubResource( 10 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 178, 11 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 60 )
shader_param/grayscale = false

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="villageAvalonia" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [ -863.129, 1285.96, 201.0 ],
"_edit_vertical_guides_": [ -2361.64, 1451.75, 52.9996 ]
}

[node name="avaloniaBackground" type="Sprite" parent="."]
position = Vector2( -456.764, 215.16 )
texture = ExtResource( 3 )

[node name="buttonsCollider" type="Node2D" parent="."]
visible = false
script = ExtResource( 14 )

[node name="mainBuildings" type="Node2D" parent="buttonsCollider"]

[node name="bakeryBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -501, -411 )
input_pickable = false

[node name="bakeryCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/bakeryBtn"]
polygon = PoolVector2Array( 56.1503, 211.85, 43.8003, 256.5, 33.3503, 233.7, 25.7502, 278.35, 9.60022, 300.2, 7.70023, 336.3, 61.8503, 365.75, 78.9503, 353.4, 93.2003, 374.3, 128.35, 374.3, 189.15, 418, 287.951, 350.55, 271.801, 339.15, 284.151, 329.65, 254.7, 247.95, 240.45, 261.25, 225.25, 226.1, 217.65, 252.7, 201.5, 218.5, 190.1, 251.75, 167.3, 199.5, 125.5, 201.4, 110.3, 233.7, 88.4503, 210.9, 72.3003, 213.75 )

[node name="storeBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -989, -307 )

[node name="storeCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/storeBtn"]
polygon = PoolVector2Array( 424.585, 362.116, 385.122, 389.972, 368.099, 383.008, 350.302, 398.484, 354.171, 409.317, 334.052, 423.245, 313.934, 489.79, 323.993, 492.885, 320.124, 504.492, 301.553, 519.968, 405.24, 584.965, 508.927, 518.42, 477.976, 497.528, 480.297, 479.731, 453.215, 454.196, 433.096, 385.329, 440.834, 372.175 )

[node name="farmBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( 38, -147 )

[node name="farmCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/farmBtn"]
polygon = PoolVector2Array( 575.031, 582.801, 552.243, 640.138, 553.714, 658.515, 522.84, 683.508, 526.515, 698.21, 668.388, 782.011, 810.189, 830.202, 947.149, 865.022, 998.219, 823.238, 985.213, 742.316, 1059.46, 694.535, 1013.15, 660.72, 1020.5, 634.257, 972.716, 606.324, 964.63, 586.476, 944.048, 590.887, 913.174, 576.92, 874.214, 612.939, 874.214, 628.376, 863.188, 634.992, 851.426, 623.231, 820.249, 629.792, 800.705, 675.422, 707.348, 621.76, 681.62, 555.602, 647.805, 595.297, 634.574, 551.192, 614.726, 543.106, 597.819, 593.092 )

[node name="workshopBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -550, 46 )

[node name="workshopCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/workshopBtn"]
polygon = PoolVector2Array( -265.965, -122.544, -133.944, -38.2892, -98.783, -36.2989, 9.35474, -97.9971, 5.28571, -122.171, -5.30289, -124.615, -34.6252, -222.355, -57.4313, -212.581, -104.754, -199.501, -141.326, -206.88, -175.535, -228.872, -192.64, -215.025, -223.591, -232.944, -235.808, -194.662, -258.668, -166.33 )

[node name="fisheryProduce" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -17, 222 )

[node name="fisheryProduceCollision" type="CollisionShape2D" parent="buttonsCollider/mainBuildings/fisheryProduce"]
position = Vector2( -312.026, 678.442 )
shape = SubResource( 1 )

[node name="fisheryUpgrade" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( 1, 86 )

[node name="fisheryUpgradeCollision" type="CollisionShape2D" parent="buttonsCollider/mainBuildings/fisheryUpgrade"]
position = Vector2( -265.262, 868.901 )
shape = SubResource( 2 )

[node name="huntingProduce" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -80, -80 )

[node name="huntingProduceCollision" type="CollisionShape2D" parent="buttonsCollider/mainBuildings/huntingProduce"]
position = Vector2( 694.611, 927.694 )
shape = SubResource( 3 )

[node name="huntingUpgrade" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -80, -80 )

[node name="huntingUpgradeCollision" type="CollisionShape2D" parent="buttonsCollider/mainBuildings/huntingUpgrade"]
position = Vector2( 760.003, 980.995 )
shape = SubResource( 4 )

[node name="castleBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -107, -89 )

[node name="castleCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/castleBtn"]
polygon = PoolVector2Array( 527.201, -337.95, 521.501, -508, 572.801, -538.4, 605.101, -521.3, 681.101, -559.3, 683.001, -584, 708.651, -590.65, 706.751, -626.75, 713.401, -655.25, 762.801, -681.851, 807.451, -654.3, 806.501, -629.6, 815.051, -620.1, 816.001, -602.05, 835.001, -577.35, 902.451, -528.9, 950.901, -546, 1009.8, -504.2, 993.651, -479.5, 996.501, -329.4, 760.901, -190.7, 527.201, -338.9 )

[node name="estateBtn" type="Area2D" parent="buttonsCollider/mainBuildings"]
position = Vector2( -287, -170 )

[node name="estateCollision" type="CollisionPolygon2D" parent="buttonsCollider/mainBuildings/estateBtn"]
polygon = PoolVector2Array( -141.544, 323.078, -102.855, 324.625, -98.2123, 344.744, -45.5952, 381.885, -17.739, 428.312, -21.6079, 481.703, -29.3458, 494.083, -27.0244, 508.012, -5.35852, 525.035, -105.176, 587.711, -165.531, 552.117, -147.734, 535.094, -164.758, 530.451, -183.328, 542.832, -212.732, 526.582, -184.102, 504.143, -182.555, 458.49, -192.614, 454.621, -173.269, 420.574, -177.138, 402.777 )

[node name="secondaryBuildings" type="Node2D" parent="buttonsCollider"]

[node name="building1" type="Area2D" parent="buttonsCollider/secondaryBuildings"]
position = Vector2( -416, 120 )

[node name="building1Collision" type="CollisionPolygon2D" parent="buttonsCollider/secondaryBuildings/building1"]
polygon = PoolVector2Array( -536.18, -80.1994, -578.08, -54.3608, -598.332, -57.1542, -599.729, -47.3774, -633.948, 5.69629, -643.724, 47.5966, -649.311, 73.4352, -556.432, 132.794, -457.966, 70.6418, -475.425, 44.8033, -483.106, 32.2332, -512.437, 4.29962 )

[node name="building2" type="Area2D" parent="buttonsCollider/secondaryBuildings"]
position = Vector2( -1134, -142 )

[node name="building2Collision" type="CollisionPolygon2D" parent="buttonsCollider/secondaryBuildings/building2"]
polygon = PoolVector2Array( -248.66, 236.936, -321.985, 276.043, -331.064, 295.597, -343.007, 314.948, -343.007, 364.682, -280.509, 409.135, -202.606, 356.76, -210.251, 231.349, -227.011, 216.684, -244.47, 225.064 )

[node name="labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bakeryLabel" type="Label" parent="labels"]
margin_left = -433.249
margin_top = -248.424
margin_right = -302.249
margin_bottom = -218.424
custom_fonts/font = SubResource( 5 )
text = "Bakery"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning" type="TextureRect" parent="labels/bakeryLabel"]
visible = false
material = SubResource( 6 )
margin_left = 76.2294
margin_top = -6.15585
margin_right = 98.2294
margin_bottom = 15.8441
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shopLabel" type="Label" parent="labels"]
margin_left = -721.43
margin_top = 82.873
margin_right = -625.43
margin_bottom = 112.873
custom_fonts/font = SubResource( 5 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickMoneyLabel" type="Label" parent="labels"]
margin_left = -398.0
margin_top = 222.0
margin_right = -278.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( -250.777, 260.384 )
custom_fonts/font = SubResource( 5 )
text = "Estate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="farmLabel" type="Label" parent="labels"]
margin_left = 537.683
margin_top = 400.343
margin_right = 642.683
margin_bottom = 430.343
rect_pivot_offset = Vector2( 199.156, 117.202 )
custom_fonts/font = SubResource( 5 )
text = "Farm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="workshopLabel" type="Label" parent="labels"]
margin_left = -762.917
margin_top = -212.225
margin_right = -563.917
margin_bottom = -182.225
rect_pivot_offset = Vector2( 199.156, 117.202 )
custom_fonts/font = SubResource( 5 )
text = "Workshop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="castleLabel" type="Label" parent="labels"]
margin_left = 392.59
margin_top = -654.979
margin_right = 539.59
margin_bottom = -624.979
rect_pivot_offset = Vector2( 370.222, -122.827 )
custom_fonts/font = SubResource( 5 )
text = "Castle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fisheryLabel" type="Label" parent="labels"]
margin_left = -400.0
margin_top = 807.01
margin_right = -246.0
margin_bottom = 837.01
rect_pivot_offset = Vector2( 384.49, 571.588 )
custom_fonts/font = SubResource( 5 )
text = "Fishery"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="huntingCabinLabel" type="Label" parent="labels"]
margin_left = 493.0
margin_top = 751.36
margin_right = 738.0
margin_bottom = 781.36
rect_pivot_offset = Vector2( 384.49, 571.588 )
custom_fonts/font = SubResource( 5 )
text = "Hunting Cabin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fishery" type="Node2D" parent="."]
position = Vector2( -451.197, 829.491 )
script = ExtResource( 57 )

[node name="fisheryBtn" type="Sprite" parent="fishery"]
material = SubResource( 7 )
position = Vector2( 122.539, 70.8541 )
scale = Vector2( 0.449253, 0.449252 )
texture = ExtResource( 55 )

[node name="levelBkgr" type="Sprite" parent="fishery/fisheryBtn"]
position = Vector2( -141.553, 120.918 )
scale = Vector2( 2.05616, 2.05616 )
texture = ExtResource( 54 )

[node name="levelCost" type="Label" parent="fishery/fisheryBtn/levelBkgr"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.895279
margin_top = -34.3257
margin_right = 69.8953
margin_bottom = 8.67438
grow_horizontal = 2
custom_fonts/font = SubResource( 9 )
text = "cost"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelCount" type="Label" parent="fishery/fisheryBtn/levelBkgr"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0886
margin_top = -51.3337
margin_right = -13.0886
margin_bottom = -8.33366
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 11 )
text = "lvl"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade-fishery" type="Sprite" parent="fishery/fisheryBtn"]
position = Vector2( 142.055, 121.212 )
scale = Vector2( 0.720088, 0.720088 )
texture = ExtResource( 56 )

[node name="progressBarBody" type="TextureRect" parent="fishery/fisheryBtn"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -278.191
margin_top = -330.877
margin_right = -94.1912
margin_bottom = -314.877
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="progressBar" type="ProgressBar" parent="fishery/fisheryBtn/progressBarBody"]
margin_left = 2.0
margin_top = 2.0
margin_right = 181.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fishTimer" type="Timer" parent="fishery"]

[node name="progressTimer" type="Timer" parent="fishery"]
wait_time = 0.001

[node name="huntingCabin" type="Node2D" parent="."]
position = Vector2( 615.173, 847.646 )
script = ExtResource( 58 )

[node name="huntingBtn" type="Sprite" parent="huntingCabin"]
material = SubResource( 14 )
scale = Vector2( 0.431354, 0.431353 )
texture = ExtResource( 59 )

[node name="levelBkgr" type="Sprite" parent="huntingCabin/huntingBtn"]
position = Vector2( -141.618, 123.94 )
scale = Vector2( 2.06903, 2.06903 )
texture = ExtResource( 54 )

[node name="levelCost" type="Label" parent="huntingCabin/huntingBtn/levelBkgr"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.70796
margin_top = -33.4879
margin_right = 65.292
margin_bottom = 9.51212
grow_horizontal = 2
custom_fonts/font = SubResource( 9 )
text = "cost"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelCount" type="Label" parent="huntingCabin/huntingBtn/levelBkgr"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5436
margin_top = -46.0807
margin_right = -18.5436
margin_bottom = -16.0807
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 11 )
text = "lvl"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade-hunting" type="Sprite" parent="huntingCabin/huntingBtn"]
position = Vector2( 151.631, 123.645 )
scale = Vector2( 0.72, 0.72 )
texture = ExtResource( 56 )

[node name="progressBarBody" type="TextureRect" parent="huntingCabin/huntingBtn"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -283.283
margin_top = -336.831
margin_right = -99.2834
margin_bottom = -320.831
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="progressBar" type="ProgressBar" parent="huntingCabin/huntingBtn/progressBarBody"]
margin_left = 2.0
margin_top = 2.0
margin_right = 181.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="huntingTimer" type="Timer" parent="huntingCabin"]

[node name="progressTimer" type="Timer" parent="huntingCabin"]
wait_time = 0.001

[node name="incomeBuildings" type="Node2D" parent="."]
position = Vector2( -544, 0 )

[node name="building1" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -1205.99, 176.488 )
targetBuilding = "building1"

[node name="building2" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -1069.99, 89.488 )
targetBuilding = "building2"

[node name="building3" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -1334.2, 258.549 )
targetBuilding = "building3"

[node name="building4" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -1013.01, 700.436 )
targetBuilding = "building4"

[node name="building5" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -905.631, 640.633 )
targetBuilding = "building5"

[node name="building6" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -679.104, 680.369 )
targetBuilding = "building6"

[node name="building7" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -555.999, 590.684 )
targetBuilding = "building7"

[node name="building8" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -429.367, 524.632 )
targetBuilding = "building8"

[node name="building9" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( -474.406, 946.98 )
targetBuilding = "building9"

[node name="building10" parent="incomeBuildings" instance=ExtResource( 20 )]
position = Vector2( 345.197, 514.02 )
targetBuilding = "building10"

[node name="UiCanvas" type="CanvasLayer" parent="."]

[node name="bakery" parent="UiCanvas" instance=ExtResource( 19 )]
visible = false
margin_top = 101.0
margin_bottom = 756.0
custom_styles/panel = SubResource( 15 )

[node name="store" parent="UiCanvas" instance=ExtResource( 17 )]
visible = false
custom_styles/panel = SubResource( 16 )

[node name="farm" parent="UiCanvas" instance=ExtResource( 1 )]
visible = false

[node name="workshop" parent="UiCanvas" instance=ExtResource( 53 )]
visible = false
margin_top = 56.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 415.173, 194.324 )

[node name="checkUi" type="Timer" parent="."]
wait_time = 0.002
autostart = true

[node name="dragTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
[connection signal="timeout" from="fishery/fishTimer" to="fishery" method="_on_fishTimer_timeout"]
[connection signal="timeout" from="fishery/progressTimer" to="fishery" method="_on_progressTimer_timeout"]
[connection signal="timeout" from="huntingCabin/huntingTimer" to="huntingCabin" method="_on_huntingTimer_timeout"]
[connection signal="timeout" from="huntingCabin/progressTimer" to="huntingCabin" method="_on_progressTimer_timeout"]
[connection signal="timeout" from="checkUi" to="." method="_on_checkUi_timeout"]

[editable path="UiCanvas/bakery"]
